MODBULKOPS-531 Fixed minor